# SFML-ECS-Poker-Hand-Ranking

./: CMakeLists.txt  README.md
assets/Cards_Pixel_Art/: Novo Documento de Texto.txt
assets/Pixel Icons/: Novo Documento de Texto.txt
src/: Card.hpp  CardGame.hpp  Deck.hpp  Hand.hpp  debug.cpp  main.cpp
